// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagItem with class matches snapshot. 1`] = `
<li
  className="ColorConfigItem"
>
  <span
    style={
      Object {
        "display": "inline-block",
        "width": "calc(100% - 175px)",
      }
    }
  >
    <span
      className="TagName"
    >
      CS2112
    </span>
    <span
      className="ClassExpandedTitle"
    >
      CRITTER
    </span>
  </span>
  <button
    className="ColorEdit"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="ColorDisplay"
      style={
        Object {
          "backgroundColor": "blue",
        }
      }
    />
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="More"
    >
      <img
        alt="More"
        className="Arrow"
        src="/svgs/v.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </button>
  <button
    className="DeleteTag"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Delete"
    >
      <img
        alt="Delete"
        src="/svgs/XLight.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </button>
</li>
`;

exports[`TagItem without class matches snapshot. 1`] = `
<li
  className="ColorConfigItem"
>
  <span
    className="TagName"
    style={
      Object {
        "width": "calc(100% - 175px)",
      }
    }
  >
    <input
      className="TagEdit"
      onChange={[Function]}
      type="text"
      value="Foo"
    />
  </span>
  <button
    className="ColorEdit"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="ColorDisplay"
      style={
        Object {
          "backgroundColor": "red",
        }
      }
    />
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="More"
    >
      <img
        alt="More"
        className="Arrow"
        src="/svgs/v.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </button>
  <button
    className="DeleteTag"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Delete"
    >
      <img
        alt="Delete"
        src="/svgs/XLight.svg"
        style={
          Object {
            "height": "1em",
            "width": "1em",
          }
        }
      />
    </span>
  </button>
</li>
`;
